Fix: Corrige erros de inicialização do Docker e implementa autenticação

--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
-DATABASE_URL=
-SECRET_KEY=
-TWITTER_BEARER_TOKEN=
-REDIS_URL=
+# Configuração do Banco de Dados
+POSTGRES_USER=sentiment_user
+POSTGRES_PASSWORD=your_strong_password
+POSTGRES_DB=sentiment_db
+
+# A URL de conexão usa as variáveis acima e a porta INTERNA (5432)
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+
+# Configuração do Redis
+REDIS_URL=redis://redis:6379/0
+
+# Outras Chaves
+SECRET_KEY=sua-chave-secreta-bem-longa-aqui-e-segura
+TWITTER_BEARER_TOKEN=seu_token_aqui
